--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
          integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" 
          crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="icon" href="C:\Users\fatum\Desktop\pf\portfolio\port\HTML\css\pics\favicon.ico"> 
+        <link rel="icon" href="pics\favicon.ico"> 
     </head>
     <body>
     <script src="script.js"></script>
@@ -22,7 +22,7 @@
             <h2 id="hi"><em>Hi there!</h2></em>
             <p id="na"><strong>I AM<span class="me"> FATUMA IBRAHIM</span></p></span></strong>
             <h3 id="ti">I am a Software Engineering Student.</h3>
-            <img class="pic" src="C:\Users\fatum\Desktop\pf\portfolio\port\HTML\css\pics\pic.png" alt="picture">
+            <img class="pic" src="pics\pic.png" alt="picture">
             <p class="int">A passionate software engineering student with a strong interest <br>
                 in developing innovative and user-centric solutions.</p>
             <a href="Fatum CV.pdf" download class="btn" target="_blank"><strong>Download CV</strong></a>
