--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h2 id="hi"><em>Hi there!</h2></em>
             <p id="na"><strong>I AM<span class="me"> FATUMA IBRAHIM</span></p></span></strong>
             <h3 id="ti">I am a Software Engineering Student.</h3>
-            <img class="pic" src="pics\pic.png" alt="picture">
+            <img class="pic" src="/pics/pic.png" alt="picture">
             <p class="int">A passionate software engineering student with a strong interest <br>
                 in developing innovative and user-centric solutions.</p>
             <a href="Fatum CV.pdf" download class="btn" target="_blank"><strong>Download CV</strong></a>
